Cambis menores/configuracion

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather-app",
-  "homepage": "https://aswan123.github.io/Nws-app/",
+  "homepage": "https://LehimV.github.io/Final3-MLVL",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
